<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CheckPointActivity" >

    <Button
        android:id="@+id/btnChooseScanPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtInstructions"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/chooseScanPhoto" />

    <Button
        android:id="@+id/btnInputCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnChooseScanPhoto"
        android:layout_below="@+id/btnChooseScanPhoto"
        android:text="@string/inputCode" />

    <Button
        android:id="@+id/btnSaveCheckpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:text="@string/saveCheckpoint" />

    <EditText
        android:id="@+id/txtInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/instructions"
        android:inputType="textMultiLine"
        android:minHeight="100dp" />

</RelativeLayout>
